--- a/QuestAdventure.html
+++ b/QuestAdventure.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Quest Adventure</title>
-</head>
-<body>
-<script>
-console.log('Quest Rules!');
-</script>
-</body>
+  <head>
+    <title>Quest Adventure</title>
+  </head>
+  <body>
+    <script>
+      var x = 'Quest Rules!;
+      console.log(x);
+    </script>
+  </body>
 </html>
