add missing quote

--- a/QuestAdventure.html
+++ b/QuestAdventure.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <script>
-      var x = 'Quest Rules!;
+      var x = 'Quest Rules!';
       console.log(x);
     </script>
   </body>
